<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popLayout2"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title2"
                android:text="@string/contact_manager"
                android:layout_centerHorizontal="true"
                android:textColor="#D1030303"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/viewName"
                android:layout_marginTop="14dp"
                android:textColor="#E2202020"
                android:textColorHint="@android:color/darker_gray"
                android:inputType="textCapWords"
                android:hint="@string/contact_name"
                android:layout_below="@id/title2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/viewNo"
                android:textColor="#E2202020"
                android:textColorHint="@android:color/darker_gray"
                android:hint="@string/econtact_number"
                android:inputType="phone"
                android:layout_below="@id/viewName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <Button
                android:id="@+id/update"
                android:layout_marginTop="10dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:background="#E2202020"
                android:text="@string/update"
                android:textColor="@android:color/white"
                android:layout_below="@id/viewNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <Button
                android:id="@+id/delete"
                android:layout_marginTop="10dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:background="#E2202020"
                android:text="@string/delete"
                android:textColor="@android:color/white"
                android:layout_below="@id/update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <Button
                android:id="@+id/cancel"
                android:layout_marginTop="10dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:background="@android:color/holo_red_light"
                android:text="@string/cancel"
                android:textColor="@android:color/white"
                android:layout_below="@id/delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </RelativeLayout>


    </androidx.cardview.widget.CardView>
</LinearLayout>